Added commonMetadata plugin

--- a/code/module/Application/view/error/404.phtml
+++ b/code/module/Application/view/error/404.phtml
@@ -2,9 +2,10 @@
 
 use Laminas\Mvc\Application;
 
-/**
-* @var Laminas\View\Renderer\PhpRenderer $this
-*/
+$this->metadata=new \ArrayObject([
+    'showShare'=>false,
+    'showFeedback'=>false,
+]);
 
 ?>
 <h1>A 404 error occurred</h1>
