--- a/code/module/Application/view/layout/splash.phtml
+++ b/code/module/Application/view/layout/splash.phtml
@@ -18,8 +18,8 @@ $translate = function($string, $lang) use ($translator) {
 };
 
 // You NEED to provide the homeRoute, if not, show an error. Hopefully this is caught before going to prod
-if(!$this->homeRoute) {
-    print $this->translate("You MUST define a <strong>homeRoute</strong> variable to use the splash page", 'layout');
+if(!$this->homeRoute && !isset($this->homeUrl) ) {
+    print $this->translate("You MUST define a <strong>homeRoute</strong> or <strong>homeUrl</strong> variable to use the splash page", 'layout');
     exit();
 }
 
@@ -93,11 +93,11 @@ if($missing){
                     <div class="row wb-eqht-grd">
                         <section class="col-sm-6 text-sm-right">
                             <h2 class="hght-inhrt h4"><?=$translate($this->metadata['title'], $en);?></h2>
-                            <p><a href="<?=$this->url($this->homeRoute, $this->homeRouteParams);?>" class="btn btn-primary" translate="no">English</a></p>
+                            <p><a href="<?=$this->homeRoute?$this->url($this->homeRoute, $this->homeRouteParams):$translate($this->homeUrl,$en);?>" class="btn btn-primary" translate="no">English</a></p>
                         </section>
                         <section class="col-sm-6" lang="fr">
                             <h2 class="hght-inhrt h4"><?=$translate($this->metadata['title'], $fr);?></h2>
-                            <p><a href="<?=$this->url($this->homeRoute, array_merge(['locale'=>'fr'], $this->homeRouteParams));?>" class="btn btn-primary" translate="no">Français</a></p>
+                            <p><a href="<?=$this->homeRoute?$this->url($this->homeRoute, array_merge(['locale'=>'fr'], $this->homeRouteParams)):$translate($this->homeUrl,$en);?>" class="btn btn-primary" translate="no">Français</a></p>
                         </section>
                     </div>
 
