added a few more layout strings

--- a/code/module/Application/view/layout/canada.ca.phtml
+++ b/code/module/Application/view/layout/canada.ca.phtml
@@ -109,9 +109,9 @@ $usefulLinksLocation = $layout->usefulLinksLocation;
             <?php endif;?>
         });
         laminas.strings={
-            "Sign in":'<?=$this->translate("Sign in");?>',
-            "Sign out":'<?=$this->translate("Sign out");?>',
-            "Application settings":'<?=$this->translate("Application settings");?>',
+            "Sign in":'<?=$this->translate("Sign in", 'layout');?>',
+            "Sign out":'<?=$this->translate("Sign out", 'layout');?>',
+            "Application settings":'<?=$this->translate("Application settings", 'layout');?>',
             "required":'<?=$this->translate("required", 'layout');?>',
             "Submit":'<?=$this->translate("Submit", 'layout');?>',
             "Cancel":'<?=$this->translate("Cancel", 'layout');?>',
